[tool.poetry]
name = "selenium"
version = "0.1.0"
description = ""
authors = ["Ivan Yastrebov <easy.quest@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
urllib3 = "^1.26.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
